Updated Industry day and WSW

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -112,6 +112,10 @@ title: Women in the Smart World Forum 2025
                 Beijing Raygen Innovation Technology Co., Ltd, China
               </h5>
               <h5 class="fs-6">
+                Kaoru Ota <br />
+                Muroran Institute of Technology, Japan
+              </h5>
+              <h5 class="fs-6">
                 Joanna Siebert <br />
                 Harbin Institute of Technology, Shenzhen, China
               </h5>
