--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -829,6 +829,46 @@ title: Industry Day
       ></a>
     </div>
   </div>
+  <!-- Zi Wang -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Zi_Wang_Headshot.png"
+          alt="Zi Wang"
+          class="circle-img mb-3"
+        />
+        <h4>Zi Wang</h4>
+        <h6><i>Leader of Congestion Management and Smart Mobility</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.calgary.ca/"
+              >The City of Calgary</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Zi Wang is the Leader of Congestion Management and Smart Mobility within
+        the City of Calgary's Mobility Business Unit. His team is focused on
+        implementing innovative solutions to address congestion issues. Zi began
+        his career with the City of Regina and joined the City of Calgary in
+        2020 as the supervisor of the Traffic Management Centre. He has
+        leveraged his extensive background in municipal traffic engineering to
+        enhance the city's mobility infrastructure. Zi holds both a bachelor's
+        and a master's degree from the University of Regina. With over a decade
+        of diverse experience, he is skilled in various areas, including traffic
+        signal design, signal timing, signal construction, expressway lighting,
+        traffic safety, temporary traffic control, and traffic incident
+        management.
+      </p>
+    </div>
+  </div>
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
