--- a/registration/index.html
+++ b/registration/index.html
@@ -73,6 +73,7 @@ title: Registration
                 >
                   <h3 class="text-center">SWC 2025</h3>
                   <h5 class="fs-6 text-center">IEEE SWC 2025 Main Track</h5>
+                  <h5>(Includes Workshops, Special Sessions, and Forums)</h5>
                   <a
                     href="https://events.payqlick.com/event/48/ieee-swc-2025"
                     class="btn btn-primary w-100"
