Updates to dates and navbar

--- a/atc/index.html
+++ b/atc/index.html
@@ -68,7 +68,7 @@ title: IEEE ATC 2025
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">May 31, 2025</h6>
+          <h6 class="text-decoration-line-through">May 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
           <h6 class="">June 30, 2025</h6>
