--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -52,16 +52,16 @@ title: Women in the Smart World Forum 2025
           <h5 class="fs-6 fw-bold text-center m-0">First Submission Cycle</h5>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Proposal Deadline</h5>
-          <h6 class="">April 20, 2025</h6>
+          <h6 class="text-decoration-line-through">April 20, 2025</h6>
           <h5 class="fs-6 fw-bold text-center">Proposal Notification</h5>
-          <h6 class="">April 25, 2025</h6>
+          <h6 class="text-decoration-line-through">April 25, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center m-0">Second Submission Cycle</h5>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Proposal Deadline</h5>
-          <h6 class="">May 20, 2025</h6>
+          <h6 class="text-decoration-line-through">May 20, 2025</h6>
           <h5 class="fs-6 fw-bold text-center">Proposal Notification</h5>
-          <h6 class="">May 25, 2025</h6>
+          <h6 class="text-decoration-line-through">May 25, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
