--- a/index.html
+++ b/index.html
@@ -106,10 +106,14 @@ title: Home
             Authors Notification (A delay of approximately one week caused by
             the high volume of paper submissions.)
           </h5>
-          <h6 class="">{{site.data.swc_data.dates.authorsNotification}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.authorsNotification}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
-          <h6 class="">{{site.data.swc_data.dates.demoPosterWIPPaperDue}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.demoPosterWIPPaperDue}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera Ready Copy Due</h5>
           <h6 class="">{{site.data.swc_data.dates.cameraReadyDue}}</h6>
