--- a/registration/index.html
+++ b/registration/index.html
@@ -72,8 +72,10 @@ title: Registration
                   class="card-body d-flex flex-column justify-content-between gap-3 h-100"
                 >
                   <h3 class="text-center">SWC 2025</h3>
-                  <h5 class="fs-6 text-center">IEEE SWC 2025 Main Track</h5>
-                  <h5>(Includes Workshops, Special Sessions, and Forums)</h5>
+                  <h5 class="fs-6 text-center">
+                    IEEE SWC 2025 Main Track<br />(Includes Workshops, Special
+                    Sessions, and Forums)
+                  </h5>
                   <a
                     href="https://events.payqlick.com/event/48/ieee-swc-2025"
                     class="btn btn-primary w-100"
