--- a/uic/index.html
+++ b/uic/index.html
@@ -67,7 +67,9 @@ title: IEEE UIC 2025
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">(extended to) June 10, 2025</h6>
+          <h6 class="text-decoration-line-through">
+            (extended to) June 10, 2025
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
           <h6 class="">June 30, 2025</h6>
