--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -47,7 +47,10 @@ title: FUSION Workshop 2025
             Deadline of Abstract and Full Paper Submission
           </h5>
           <h6 class="">
-            <s>May 16, 2025</s><span style="color: red"> June 10, 2025</span>
+            <s>May 16, 2025</s
+            ><span class="text-decoration-line-through" style="color: red">
+              June 10, 2025</span
+            >
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
