--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -24,7 +24,7 @@ title: SEGA Workshop 2025
         Generative AI (SEGA) 2025
       </h1>
       <h3>August 21, 2025</h3>
-<!--       <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
+      <!--       <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
         >Call For Papers</a
       > -->
     </div>
@@ -44,11 +44,14 @@ title: SEGA Workshop 2025
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Submission Deadline</h5>
           <h6 class="">
-            <s>May 10, 2025</s><span style="color: red"> May 25, 2025</span>
+            <s>May 10, 2025</s
+            ><span class="text-decoration-line-through" style="color: red">
+              May 25, 2025</span
+            >
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Acceptance Notification</h5>
-          <h6 class="">June 15, 2025</h6>
+          <h6 class="text-decoration-line-through">June 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-Ready Version</h5>
           <h6 class="">June 30, 2025</h6>
