--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -69,7 +69,7 @@ title: IEEE Digital Twin 2025
           <h6 class="text-decoration-line-through">February 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">May 31, 2025</h6>
+          <h6 class="text-decoration-line-through">May 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
           <h6 class="">June 30, 2025</h6>
