--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -68,10 +68,10 @@ title: IEEE MVS 2025
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">May 31, 2025</h6>
+          <h6 class="text-decoration-line-through">May 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
-          <h6 class="">June 15, 2025</h6>
+          <h6 class="text-decoration-line-through">June 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
           <h6 class="">June 30, 2025</h6>
