--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -65,7 +65,7 @@ title: IEEE ScalCom 2025
           <h6 class="text-decoration-line-through">May 10, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">June 1, 2025</h6>
+          <h6 class="text-decoration-line-through">June 1, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
           <h6 class="">July 1, 2025</h6>
