Added tutorial and industry day links

--- a/registration/index.html
+++ b/registration/index.html
@@ -367,14 +367,26 @@ title: Registration
             </tr>
           </tbody>
         </table>
-        <h3>Industry Day Tickets</h3>
-        <p>
-          The
-          <a href="/program/industry-day/">Industry Day (August 19)</a> ticket
-          is included in the registration. If you wish to participate in
-          Industry Day only, the ticket is sold separately for
-          <b>USD $100</b> and can be purchased on the SWC registration page.
-        </p>
+        <div>
+          <h3>Industry Day Tickets</h3>
+          <p>
+            The
+            <a href="/program/industry-day/">Industry Day (August 19)</a> ticket
+            is included in the registration. If you wish to participate in
+            Industry Day only, the ticket is sold separately for
+            <b>USD $100</b>.
+          </p>
+          <div>
+            <a
+              href="https://events.payqlick.com/checkout/289"
+              target="_blank"
+              class="btn btn-primary"
+              >Purchase IEEE SWC 2025 Industry Day Only Ticket</a
+            >
+            <p>(Must be logged into PayQlick)</p>
+          </div>
+        </div>
+
         <h3>Banff Day Trip</h3>
         <p>
           Tickets for the
