--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -30,31 +30,45 @@ title: Industry Day
   class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
 >
   <div class="row g-5">
-    <div class="col-sm-12 d-flex flex-column gap-4">
+    <div
+      class="col-sm-12 d-flex flex-column gap-2 justify-content-start align-items-start"
+    >
       <h2 class="fs-2">
         Join us at the 2025 IEEE Smart World Congress Industry Day, where
         thought leaders, innovators, and economic development experts come
         together to shape the future.
       </h2>
-      <p class="fs-5">
-        Location:
-        <a href="https://calgary-convention.com/" target="_blank"
-          >Telus Convention Center, Calgary (136 8 Ave SE, Calgary, AB T2P
-          0K6)</a
-        ><br /><br />Note: Registered conference attendees will have the
-        opportunity to tour The City of Calgary WAVE Technology Center on the
-        Industry Day (by appointments only) 
-        <a
-          href="https://www.calgary.ca/major-projects/smart-city/tech-centre.html"
-          target="_blank"
-          >The City of Calgary Wave Tech Centre</a
-        >. <br /><br />
-        Industry day ticket is included in regular
-        <a href="/registration/">conference registration</a>.<br /><br />
-        Industry day only tickets can be purchased on the
-        <a href="/registration/">IEEE SWC 2025 registration page</a> for
-        <b>USD $100</b>.
-      </p>
+      <div>
+        <p class="fs-5 m-0">
+          Location:
+          <a href="https://calgary-convention.com/" target="_blank"
+            >Telus Convention Center, Calgary (136 8 Ave SE, Calgary, AB T2P
+            0K6)</a
+          ><br /><br />Note: Registered conference attendees will have the
+          opportunity to tour The City of Calgary WAVE Technology Center on the
+          Industry Day (by appointments only) 
+          <a
+            href="https://www.calgary.ca/major-projects/smart-city/tech-centre.html"
+            target="_blank"
+            >The City of Calgary Wave Tech Centre</a
+          >. <br /><br />
+          Industry day ticket is included in regular
+          <a href="/registration/">conference registration</a>.<br /><br />
+        </p>
+        <div>
+          <p class="fs-5">
+            Industry day only tickets can also be purchased separately for
+            <b>USD $100</b>.
+          </p>
+          <a
+            href="https://events.payqlick.com/checkout/289"
+            target="_blank"
+            class="btn btn-primary"
+            >Purchase IEEE SWC 2025 Industry Day Only Ticket</a
+          >
+          <p>(Must be logged into PayQlick)</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
