Updated energy systems tutorial

--- a/tutorials/towards-resilient-and-ultrasafe-energy-systems-for-the-next-gen-smart-grid/index.html
+++ b/tutorials/towards-resilient-and-ultrasafe-energy-systems-for-the-next-gen-smart-grid/index.html
@@ -35,8 +35,8 @@ title: Tutorials - Towards Resilient and Ultrasafe Energy Systems for the Next-G
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
         <h1>
-          Join us in exploring knowledge graph computation in the era of
-          generative AI
+          Join us and learn about how intelligent energy management systems are
+          changing the future of sustainable and smart energy infrastructure
         </h1>
         <p class="fs-5">
           Recently, the number of major electrical blackouts caused by natural
