Updated speakers on industry day page

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -419,7 +419,7 @@ title: Industry Day
       <p>Coming soon</p>
     </div>
   </div>
-  <!-- Byron Riemann -->
+  <!-- Brent Guidinger -->
   <div class="row">
     <div
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
@@ -465,7 +465,7 @@ title: Industry Day
     >
       <div class="text-center">
         <img
-          src="/assets/images//Byron_Riemann.png"
+          src="/assets/images/Byron_Riemann.png"
           alt="Byron Riemann"
           class="circle-img mb-3"
         />
@@ -498,6 +498,49 @@ title: Industry Day
         operations. Ensuring that infrastructure is planned, constructed and
         managed are key components to some of Rocky View’s current success for
         economic development across the Calgary region.
+      </p>
+    </div>
+  </div>
+  <!-- C. Ashiq Rahman -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/ashiq.jpg"
+          alt="Dr. C. Ashiq Rahman"
+          class="circle-img mb-3"
+        />
+        <h4>Dr. C. Ashiq Rahman</h4>
+        <h6><i>IT Engineer 3 </i></h6>
+        <h6><i>Emerging Technologies</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.calgary.ca/home.html"
+              >The City of Calgary</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Dr. C. Ashiq Rahman is a distinguished Engineer leading the AI team
+        within the Emerging Technologies division of the City of Calgary’s IT
+        department. With over 20 years of industry experience in areas including
+        image and video processing, video analytics, artificial intelligence,
+        and machine learning, Dr. Rahman is recognized for his innovative
+        engineering, adaptability, flexibility, and commitment to enhancing
+        technological solutions. He possesses extensive expertise in product
+        development, technology evaluation, solution architecture, customer
+        engagement, and project management across various platforms. Dr. Rahman
+        has authored and co-authored more than 20 journal articles and
+        peer-reviewed conference papers and holds 3 issued patents in the United
+        States and Canada. He is a Senior Member of IEEE, a licensed
+        Professional Engineer in Alberta, and a certified Project Management
+        Professional.
       </p>
     </div>
   </div>
@@ -568,13 +611,13 @@ title: Industry Day
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
       <div class="text-center">
-        <!-- <img
-          src=""
+        <img
+          src="/assets/images/Diego_Magelhaes.jpg"
           alt="Diego Magalhaes"
           class="circle-img mb-3"
-        /> -->
+        />
         <h4>Diego Magalhaes</h4>
-        <h6><i>Enterprise Technologist, Education & Research</i></h6>
+        <h6><i>Principal Technologist</i></h6>
         <h6>
           <i
             ><a target="_blank" href="https://aws.amazon.com/local/canada/"
@@ -586,7 +629,21 @@ title: Industry Day
     </div>
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
-      <p>Coming soon</p>
+      <p>
+        Diego Magalhaes is Principal Technologist for AWS Canada, focused on
+        Education and Research, where he drives strategic customer
+        relationships, executive partnerships, and technical excellence within
+        his customer base. With over 18 years of experience in platform
+        development, system integration, tech team management and development,
+        he brings deep expertise in cloud computing, serverless architectures,
+        and SaaS solutions. As a leader of multiple worldwide engagements, Diego
+        has established himself as a seasoned professional speaker and content
+        creator, regularly presenting at industry conferences including the AWS
+        Re:Invent, AWS Summits, the Canadian EdTech Leadership Summit. Prior to
+        his current role at AWS, Diego led engineering teams responsible for the
+        worldwide deployment of a Mobile App Subscription marketplace serving
+        over 25 million customers across 60+ telecom carriers globally.
+      </p>
     </div>
   </div>
   <!-- Erin Chrusch -->
