Added Hyatt to accommodation page

--- a/travel/accommodation/index.html
+++ b/travel/accommodation/index.html
@@ -33,7 +33,7 @@ title: Accommodation
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-1">Hotels</h2>
-      <div>
+      <div class="card p-4 bg-light">
         <h3>Hyatt Regency Calgary</h3>
         <p class="fs-5">
           Group rates available at the Hyatt Regency Calgary <br />
@@ -45,7 +45,24 @@ title: Accommodation
             class="btn btn-primary"
             href="https://www.hyatt.com/en-US/group-booking/CALRC/G-SWC5"
             target="_blank"
-            >Make a Reservation</a
+            >Make a Reservation at Hyatt Regency</a
+          >
+        </div>
+      </div>
+      <div class="card p-4 bg-light">
+        <h3>Calgary Marriott Downtown</h3>
+        <p class="fs-5">
+          $229.00 CAD per night - Last Day to Book : Wednesday, July 23, 2025
+          <br />
+          110 9 Ave SE <br />
+          Calgary, Alberta T2G 0P5 Canada
+        </p>
+        <div class="d-flex flex-column justify-content-start align-items-start">
+          <a
+            class="btn btn-primary"
+            href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1750967290097&key=GRP&app=resvlink"
+            target="_blank"
+            >Make a Reservation at Marriott</a
           >
         </div>
       </div>
