--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@ title: Home
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera Ready Copy Due</h5>
-          <h6 class="">{{site.data.swc_data.dates.cameraReadyDue}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.cameraReadyDue}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Proposal
