--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -68,10 +68,10 @@ title: IEEE ScalCom 2025
           <h6 class="text-decoration-line-through">June 1, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
-          <h6 class="">July 1, 2025</h6>
+          <h6 class="text-decoration-line-through">July 1, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Registration</h5>
-          <h6 class="">July 1, 2025</h6>
+          <h6 class="text-decoration-line-through">July 1, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
