--- a/atc/index.html
+++ b/atc/index.html
@@ -71,10 +71,10 @@ title: IEEE ATC 2025
           <h6 class="text-decoration-line-through">May 31, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Registration</h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
