--- a/cfp/index.html
+++ b/cfp/index.html
@@ -81,7 +81,7 @@ title: IEEE SWC 2025 Call for Papers
           <h6 class="text-decoration-line-through">{{site.data.swc_data.dates.demoPosterWIPPaperDue}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
-          <h6 class="">{{site.data.swc_data.dates.cameraReadyDue}}</h6>
+          <h6 class="text-decoration-line-through">{{site.data.swc_data.dates.cameraReadyDue}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Tutorial/WS/SS Proposal Due</h5>
           <h6 class="text-decoration-line-through">
