--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -74,7 +74,7 @@ title: IEEE MVS 2025
           <h6 class="text-decoration-line-through">June 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-ready Submission</h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Tutorial/WS/SS Proposal Due</h5>
           <h6 class="text-decoration-line-through">February 15, 2025</h6>
