--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -56,17 +56,17 @@ title: FUSION Workshop 2025
           <h5 class="fs-6 fw-bold text-center">
             Authors Notification and Start of Early Bird Registration
           </h5>
-          <h6 class="">June 20, 2025</h6>
+          <h6 class="text-decoration-line-through">June 20, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Submission Deadline of Camera-Ready Papers
           </h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center m-0">
             Deadline of Authors/Early-bird Registration
           </h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
         </div>
       </div>
       <div class="card bg-light-subtle">
