--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -54,7 +54,7 @@ title: SEGA Workshop 2025
           <h6 class="text-decoration-line-through">June 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-Ready Version</h5>
-          <h6 class="">June 30, 2025</h6>
+          <h6 class="text-decoration-line-through">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Workshop Date</h5>
           <h6 class="">August 21, 2025</h6>
