Updated Industry Day speakers list

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -746,17 +746,28 @@ title: Industry Day
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
       <div class="text-center">
-        <!-- <img
-          src=""
+        <img
+          src="/assets/images/KatanyaKuntz_profile.jpg"
           alt="Katanya B. Kuntz"
           class="circle-img mb-3"
-        /> -->
+        />
         <h4>Katanya B. Kuntz, Ph.D</h4>
-        <h6><i>Quantum Physicist, Co-Founder & CEO</i></h6>
         <h6>
           <i
-            ><a target="_blank" href="https://quboquantum.com/"
+            >CEO,
+            <a target="_blank" href="https://quboquantum.com/"
               >Qubo Consulting Corp.</a
+            ></i
+          >
+        </h6>
+        <h6>
+          <i
+            >Research Associate,
+            <a
+              target="_blank"
+              href="https://uwaterloo.ca/institute-for-quantum-computing/"
+              >Institute for Quantum Computing, University of Waterloo,
+              Canada</a
             ></i
           >
         </h6>
@@ -764,7 +775,20 @@ title: Industry Day
     </div>
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
-      <p>Coming soon</p>
+      <p>
+        Katanya B. Kuntz, PhD is CEO of Qubo Consulting Corp, and a Research
+        Associate at the Institute for Quantum Computing, University of
+        Waterloo, Canada. Qubo Consulting helps businesses, non-profits, and
+        government organizations make informed decisions about emerging
+        disruptive technology by training business leaders and the future
+        quantum workforce on quantum technologies. She is also the QEYSSat
+        Science Team Coordinator for Canada's first quantum satellite mission:
+        Quantum EncrYption and Science Satellite (QEYSSat), which will
+        demonstrate the distribution of encrypted keys (i.e. Quantum Key
+        Distribution) between ground and space. She is an excellent public
+        speaker, where she is known for explaining difficult concepts in
+        easy-to-understand language.
+      </p>
     </div>
   </div>
   <!-- Kyle McKrindle -->
