Updated contact information

--- a/contact/index.html
+++ b/contact/index.html
@@ -61,7 +61,8 @@ title: Contact
           For questions about the <strong>Congress Program</strong>: Prof. Reza
           Malekian &lt;<a href="mailto:reza.malekian@ieee.org"
             >reza.malekian@ieee.org</a
-          >&gt; or Prof. Oscar Lin at oscarl@athabascau.ca
+          >&gt; or Prof. Oscar Lin at
+          <a href="mailto:oscarl@athabascau.ca">oscarl@athabascau.ca</a>
         </li>
         <li class="mb-2">
           For questions about <strong>Publication</strong>: Dr. Xueqin Liang
