--- a/contact/index.html
+++ b/contact/index.html
@@ -61,8 +61,9 @@ title: Contact
           For questions about the <strong>Congress Program</strong>: Prof. Reza
           Malekian &lt;<a href="mailto:reza.malekian@ieee.org"
             >reza.malekian@ieee.org</a
-          >&gt; or Prof. Oscar Lin at
-          <a href="mailto:oscarl@athabascau.ca">oscarl@athabascau.ca</a>
+          >&gt; or Prof. Oscar Lin &lt;<a href="mailto:oscarl@athabascau.ca"
+            >oscarl@athabascau.ca</a
+          >&gt;
         </li>
         <li class="mb-2">
           For questions about <strong>Publication</strong>: Dr. Xueqin Liang
