Updated industry day speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -673,6 +673,51 @@ title: Industry Day
       <p>Coming soon</p>
     </div>
   </div>
+  <!-- Girish Limaye -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Girish.jpg"
+          alt="Girish Limaye"
+          class="circle-img mb-3"
+        />
+        <h4>Girish Limaye</h4>
+        <h6>
+          <i
+            >AI Consultant,
+            <a target="_blank" href="https://vancouver.ca/"
+              >City of Vancouver</a
+            ></i
+          >
+        </h6>
+        <h6>
+          <i
+            >President and Principal AI Consultant,
+            <a target="_blank" href="https://vectorcraftconsulting.com/"
+              >VectorCraft Consulting</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Girish is an independent AI consultant specializing in public-sector
+        transformation. Drawing on a deep background in AI, analytics, and
+        digital innovation, he helps government agencies operationalize AI
+        through practical strategy, rapid prototyping, ethical governance, and
+        capacity building. He brings both technical depth and field-tested
+        insight, having studied modern AI at Stanford as deep learning began
+        reshaping the field. His work helps public institutions navigate
+        complexity, scale responsibly, and build enduring, AI-literate teams
+        that deliver measurable value.
+      </p>
+    </div>
+  </div>
   <!-- Google Canada -->
   <div class="row">
     <div
