Updated industry day speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -687,18 +687,8 @@ title: Industry Day
         <h4>Girish Limaye</h4>
         <h6>
           <i
-            >AI Consultant,
-            <a target="_blank" href="https://vancouver.ca/"
-              >City of Vancouver</a
-            ></i
-          >
-        </h6>
-        <h6>
-          <i
-            >President and Principal AI Consultant,
-            <a target="_blank" href="https://vectorcraftconsulting.com/"
-              >VectorCraft Consulting</a
-            ></i
+            >AI Consultant Specializing in Civic Tech & Responsible
+            Innovation</i
           >
         </h6>
       </div>
