Updated Industry Day speakers list

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -826,6 +826,57 @@ title: Industry Day
       </p>
     </div>
   </div>
+  <!-- Kelly Brown -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Kelly_Brown.jpg"
+          alt="Kelly Brown"
+          class="circle-img mb-3"
+        />
+        <h4>Kelly Brown</h4>
+        <h6>
+          <i
+            >Engineering Manager, Innovation & Collaboration (I&C) Division in
+            Information Technology</i
+          >
+        </h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.calgary.ca/home.html"
+              >The City of Calgary</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        As the manager of I&C, Kelly oversees the City's telecommunications
+        infrastructure and services; from business mobility and the City’s
+        internal audio/visual ecosystem to its contact centres and extensive
+        fibre infrastructure. Her team of engineers and technology experts also
+        work together to solution The City's carrier class network and advance
+        technology innovation through a Smart Cities approach.
+        <br /><br />
+        Kelly has worked for the Information Technology Business Unit at The
+        City of Calgary for 18 years, starting as an IT Engineer leading the
+        voice communications team and progressively taking on additional roles
+        leading to manager of the division.
+        <br /><br />
+        With a degree in Applied Mathematics and Electrical Engineering from
+        Queen’s University, Kelly is a strategic and analytical thinker. Working
+        with her peers in IT and across the organization, Kelly helps manage and
+        prioritize the funding required to provide safe and secure technology
+        solutions that enable City business units to deliver services to a
+        diverse and growing city.
+      </p>
+    </div>
+  </div>
   <!-- Kyle McKrindle -->
   <div class="row">
     <div
