Added Federated Learning tutorial

--- a/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/index.html
+++ b/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/index.html
@@ -23,7 +23,9 @@ title: Roadmap of Federated Learning - from Motivation to Practice
         Roadmap of Federated Learning: from Motivation to Practice
       </h1>
       <h3>
-        Presented by: Dr. Jiayu Zhou , University of Michigan <br />
+        Presented by:
+        <br />
+        Dr. Jiayu Zhou , University of Michigan <br />
         Dr. Steve Drew, University of Calgary <br />Guojun Tang, University of
         Calgary
       </h3>
