Added Federated Learning tutorial

--- a/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/index.html
+++ b/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/index.html
@@ -39,7 +39,10 @@ title: Roadmap of Federated Learning - from Motivation to Practice
   <div class="d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-        <h1>Join us in exploring federated learning</h1>
+        <h1>
+          Join us to explore how federated learning enables private,
+          collaborative model training across distributed data.
+        </h1>
         <p class="fs-5">
           Federated learning (FL), unlike traditional centralized learning
           methods, provides a distributed machine learning (ML) paradigm that
