--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -419,45 +419,6 @@ title: Industry Day
       <p>Coming soon</p>
     </div>
   </div>
-  <!-- Brent Guidinger -->
-  <div class="row">
-    <div
-      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-    >
-      <div class="text-center">
-        <img
-          src="/assets/images/Brent - RWI.jpg"
-          alt="Brent Guidinger"
-          class="circle-img mb-3"
-        />
-        <h4>Brent Guidinger</h4>
-        <h6><i>Strategic Accounts Executive</i></h6>
-        <h6>
-          <i
-            ><a target="_blank" href="https://rwisynthetics.com/"
-              >RWI Synthetics</a
-            ></i
-          >
-        </h6>
-        <h6>
-          <i>Edmonton, Canada</i>
-        </h6>
-      </div>
-    </div>
-    <div class="col-md-9 col-sm-8">
-      <h4>Biography</h4>
-      <p>
-        Brent Guidinger is a proud father of two who serves as the Strategic
-        Accounts Executive at RWI Synthetics. In this role, Brent has the
-        privilege of building relationships with clients, understanding their
-        values and priorities, and supporting them along their RWI journey as
-        they seek to face and solve some of the most challenging issues of our
-        time. Brent's extensive experience in the social impact sector has
-        positioned him well to support clients as they strive to build more
-        resilient, inclusive, and thriving communities.
-      </p>
-    </div>
-  </div>
   <!-- Byron Riemann -->
   <div class="row">
     <div
@@ -823,6 +784,40 @@ title: Industry Day
         Distribution) between ground and space. She is an excellent public
         speaker, where she is known for explaining difficult concepts in
         easy-to-understand language.
+      </p>
+    </div>
+  </div>
+  <!-- Katelyn Petersen -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Katelyn Petersen headshot.jpg"
+          alt="Katelyn Petersen"
+          class="circle-img mb-3"
+        />
+        <h4>Katelyn Petersen</h4>
+        <h6><i>Chief Experience Officer</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://rwisynthetics.com/"
+              >RWI Synthetics</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Katelyn Petersen is Chief Experience Officer at RWI Synthetics. Katelyn
+        holds a joint Ph.D. in German Languages, Literatures, and Linguistics
+        from the University of Alberta and the Ludwig Maximilian University of
+        Munich. With a background in international relations, technology
+        development, and higher education, Katelyn enjoys bringing people
+        together to solve interesting and complex challenges.
       </p>
     </div>
   </div>
