Updated Industry day speakers list

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -1005,6 +1005,41 @@ title: Industry Day
       ></a>
     </div>
   </div>
+  <!-- Tracey Nyholt -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Tracey Nyholt.png"
+          alt="Tracey Nyholt"
+          class="circle-img mb-3"
+        />
+        <h4>Tracey Nyholt</h4>
+        <h6><i>Founder & CEO</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://www.techjutsu.com"
+              >TechJutsu</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Tracey Nyholt brings over 20 years of cybersecurity expertise and was
+        recognized by Okta for the innovative Caller Verify solution. She
+        attributes her professional success to the principles of simplicity and
+        continuous improvement, values inspired by her martial arts training. A
+        dedicated advocate for women in STEM, Tracey serves on the Board of
+        Women in Communications & Technology. In 2023, she was honored as one of
+        Canada’s Top Women in Cybersecurity by IT World Canada.
+      </p>
+    </div>
+  </div>
   <!-- Zi Wang -->
   <div class="row">
     <div
