Updated Industry Day speakers

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -709,6 +709,45 @@ title: Industry Day
       <p>Coming soon</p>
     </div>
   </div>
+  <!-- Jordan Smith -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Jordan-crop2.jpg"
+          alt="Jordan Smith"
+          class="circle-img mb-3"
+        />
+        <h4>Jordan Smith</h4>
+        <h6>
+          <i>Co-Founder & CEO </i>
+        </h6>
+        <h6>
+          <i>
+            <a target="_blank" href="https://www.quantizedtech.com/"
+              >Quantized Technologies Inc.</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Jordan is a quantum physicist and repeat founder, and his background
+        includes theoretical and experimental work in quantum neuroscience and
+        quantum communications. Jordan has previously founded multiple
+        businesses in the industrial sector, and he is dedicated to realizing
+        QTi's mission to build a quantum internet and to secure today's networks
+        against quantum-enabled threats. He shares QTi's vision to create an
+        interconnected world that provides quantum advantage for all, and Jordan
+        is passionate about tackling society's largest information, network, and
+        security challenges, solving them at the smallest (i.e., quantum) scale.
+      </p>
+    </div>
+  </div>
   <!-- Karam-Ali Talakshi -->
   <div class="row">
     <div
