Updated Industry Day page

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -669,19 +669,6 @@ title: Industry Day
       </p>
     </div>
   </div>
-  <!-- Google Canada -->
-  <div class="row">
-    <div
-      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-    >
-      <div class="text-center">
-        <h4>Google Canada</h4>
-      </div>
-    </div>
-    <div class="col-md-9 col-sm-8">
-      <p>More Information Coming Soon</p>
-    </div>
-  </div>
   <!-- Jason Cameron -->
   <div class="row">
     <div
@@ -969,6 +956,56 @@ title: Industry Day
         Melanie’s roots are in communications, directly supporting and advising
         both operational and strategic programs in over 12 business units over
         the last 22 years for the City of Calgary.
+      </p>
+    </div>
+  </div>
+  <!-- Mike Craigen -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images/Mike Craigen.png"
+          alt="Mike Craigen"
+          class="circle-img mb-3"
+        />
+        <h4>Mike Craigen</h4>
+        <h6>
+          <i>Customer Engineer, Public Sector, Education and Healthcare</i>
+        </h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://cloud.google.com/"
+              >Google Cloud</a
+            ></i
+          >
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Mike Craigen is a Customer Engineer at Google Cloud, where he empowers
+        government and education institutions to achieve digital transformation
+        through secure hybrid and multi-cloud architectures, alongside
+        pioneering applications of Generative AI. A Professional Engineer and
+        seasoned technologist, he brings expertise spanning cloud platforms,
+        software-defined networking (SD-WAN), telecommunications, and
+        virtualization. Known for bridging innovation with execution, Mike
+        translates technical complexity into actionable strategies, driving
+        measurable business outcomes for enterprises.
+        <br /><br />
+        Over his 15+ year career, Mike has shaped cross-industry innovation,
+        from architecting mission-critical networks in the energy sector to
+        advising Fortune 500 enterprises on NFV and containerization to helping
+        transform the Travel sector with Generative AI. A sought-after technical
+        evangelist, he keynotes conferences and leads workshops on cloud-native
+        infrastructure, edge security, and AI-driven automation, blending
+        hands-on expertise with strategic insight. Mike bridges engineering
+        rigor with executive vision. He holds a BASc in Electrical Engineering
+        from the University of Waterloo and balances his tech passion with
+        backcountry adventures in British Columbia’s mountains.
       </p>
     </div>
   </div>
