--- a/registration/index.html
+++ b/registration/index.html
@@ -222,13 +222,13 @@ title: Registration
           <li>Publication of one accepted paper in the proceedings</li>
           <li>A copy of the proceedings the accepted paper belongs to</li>
           <li>
-            Access to all conference, Industry Day, workshops, tutorials, and
-            special sessions
+            Access to all conference, Industry Day, Workshops, Tutorials, and
+            Special sessions
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
-            For in-person registration, lunch, coffee breaks, reception, and
-            banquet and award ceremony
+            For in-person registration, Lunch, Coffee breaks, Reception, 
+            Banquet, and Award ceremony
           </li>
           <li>
             For papers to be published in IEEE proceedings, two extra pages are
@@ -286,7 +286,7 @@ title: Registration
           <b>Full Conference Author Registration</b> is
           <b style="color: red">June 30, 2025</b>. The final deadline for
           <b>Full Conference Author Registration</b> is
-          <b style="color: red">July 7, 2025</b>. Please note that if your
+          <b style="color: red">July 15, 2025</b>. Please note that if your
           payment is not received by that date, the paper will be removed from
           the proceedings. This deadline will be strictly enforced. <br /><br />
           For authors with multiple accepted papers, one full registration is
@@ -313,8 +313,8 @@ title: Registration
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
-            For in-person registration, lunch, coffee breaks, reception, and
-            banquet and award ceremony
+            For in-person registration, Lunch, Coffee breaks, Reception,
+            Banquet and Award ceremony
           </li>
         </ul>
 
