--- a/registration/index.html
+++ b/registration/index.html
@@ -222,7 +222,7 @@ title: Registration
           <li>Publication of one accepted paper in the proceedings</li>
           <li>A copy of the proceedings the accepted paper belongs to</li>
           <li>
-            Access to all conference, Industry Day, Workshops, Tutorials, and
+            Access to all conference, Industry Day, Keynotes, Panels, Workshops, Tutorials, and
             Special sessions
           </li>
           <li>Program brochure and conference goodies</li>
@@ -308,8 +308,8 @@ title: Registration
             additional author)
           </li>
           <li>
-            Access to all conference, Industry Day, workshops, tutorials, and
-            special sessions
+            Access to all conference, Industry Day, Keynotes, Panels, Workshops, Tutorials, and
+            Special sessions
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
