--- a/atc/index.html
+++ b/atc/index.html
@@ -124,7 +124,7 @@ title: IEEE ATC 2025
               <h5 class="fs-6">
                 Zuowei Zhang <br />
                 Northwestern Polytechnical University, China <br />
-                <a href="mailto:zhuhao@cqupt.edu.cn">zhuhao@cqupt.edu.cn</a>
+                <a href="mailto:zhangzuowei@nwpu.edu.cn">zhangzuowei@nwpu.edu.cn</a>
               </h5>
             </div>
           </div>
